# glorytun

./: .gitmodules  CMakeLists.txt
source/: CMakeLists.txt  argz.h  bench.c  ctl.h  main.c
tools/: create_libsodium_target.cmake
