include(FetchContent)

add_library(
    glorytun_library
    STATIC
    ../external/argz/argz.c
    ../external/argz/argz.h
    ../external/mud/aegis256/aegis256.c
    ../external/mud/aegis256/aegis256.h
    ../external/mud/mud.c
    ../external/mud/mud.h
    argz.c
    argz.h
    bench.c
    bind.c
    common.c
    common.h
    ctl.c
    ctl.h
    iface.c
    iface.h
    ip.h
    keygen.c
    list.c
    main.c
    path.c
    set.c
    show.c
    tun.c
    tun.h
    version.c
)
include(../tools/create_libsodium_target.cmake)

target_include_directories(
    glorytun_library
    PUBLIC
    ../source
)
target_link_libraries(
    glorytun_library
    PUBLIC
    libsodium
)
if (PROJECT_IS_TOP_LEVEL)
    add_executable(
        glorytun_executable
        main.c
    )
    target_link_libraries(
        glorytun_executable
        PRIVATE
        glorytun_library
    )
endif ()